--- a/src/index.html
+++ b/src/index.html
@@ -16,8 +16,36 @@
 </head>
 
 <body>
-    <header>
-    </header>
+    <div class="d-flex flex-column min-vh-100">
+        <header>
+            <nav class="navbar navbar-expand-md navbar-dark bg-dark">
+
+                <div class="container">
+                    <a href="" class="navbar-brand ">
+                        <i class="fas fa-pen-square "></i> Notepad
+                    </a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+
+                    <div class="collapse navbar-collapse" id="navbarToggle">
+                        <ul class="navbar-nav">
+                            <li class="nav-item"><a href="#" class="nav-link">File</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">Edit</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <main class="d-flex flex-column flex-fill">
+            <textarea name="text" id="text" cols="30" rows="10" class="w-100 flex-fill"></textarea>
+        </main>
+    </div>
+
+
 </body>
 
 </html>
