--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,14 @@
 
                     <div class="collapse navbar-collapse" id="navbarToggle">
                         <ul class="navbar-nav">
-                            <li class="nav-item"><a href="#" class="nav-link">File</a></li>
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                  File
+                                </a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                  <li><a class="dropdown-item" href="#">Save</a></li>
+                                </ul>
+                              </li>
                             <li class="nav-item"><a href="#" class="nav-link">Edit</a></li>
                             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                         </ul>
