--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                                   File
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                  <li><a class="dropdown-item" href="#">Save</a></li>
+                                  <li><a class="dropdown-item" href="#" id="save-text">Save</a></li>
                                 </ul>
                               </li>
                             <li class="nav-item"><a href="#" class="nav-link">Edit</a></li>
