--- a/src/index.html
+++ b/src/index.html
@@ -33,13 +33,16 @@
                     <div class="collapse navbar-collapse" id="navbarToggle">
                         <ul class="navbar-nav">
                             <li class="nav-item dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                  File
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                    data-bs-toggle="dropdown" aria-expanded="false">
+                                    File
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                  <li><a class="dropdown-item" href="#" id="save-text">Save</a></li>
+                                    <li><a class="dropdown-item" href="#" id="save-text">Save</a></li>
+                                    <li><a class="dropdown-item" href="#" id="open-text"
+                                            data-bs-target="#open-file-modal" data-bs-toggle="modal">Open</a></li>
                                 </ul>
-                              </li>
+                            </li>
                             <li class="nav-item"><a href="#" class="nav-link">Edit</a></li>
                             <li class="nav-item"><a href="#" class="nav-link">About</a></li>
                         </ul>
@@ -50,6 +53,27 @@
         <main class="d-flex flex-column flex-fill">
             <textarea name="text" id="text" cols="30" rows="10" class="w-100 flex-fill"></textarea>
         </main>
+    </div>
+
+    <div class="modal" id="open-file-modal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Upload File</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="file-upload-form">
+                    <div class="modal-body">
+                        <input type="file" id="file-upload" name="file" required>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
+                    </div>
+                </form>
+
+            </div>
+        </div>
     </div>
 
 
