--- a/src/index.html
+++ b/src/index.html
@@ -43,8 +43,9 @@
                                             data-bs-target="#open-file-modal" data-bs-toggle="modal">Open</a></li>
                                 </ul>
                             </li>
-                            <li class="nav-item"><a href="#" class="nav-link">Edit</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link" data-bs-target="#edit-modal"
+                                    data-bs-toggle="modal">Edit</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link" data-bs-target="#about-modal" data-bs-toggle="modal">About</a></li>
                         </ul>
                     </div>
                 </div>
@@ -68,7 +69,29 @@
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="submit" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
+                        <button type="submit" class="btn btn-primary">Save changes</button>
+                    </div>
+                </form>
+
+            </div>
+        </div>
+    </div>
+    <div class="modal" id="edit-modal" tabindex="-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Edit</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <form id="edit-form">
+                    <div class="modal-body">
+                        <label for="font-size">Font Size <input type="number" id="font-size" name="font-size" required
+                                max="150" min="5"></label>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                        <button type="submit" class="btn btn-primary">Save changes</button>
                     </div>
                 </form>
 
