add about modal

--- a/src/index.html
+++ b/src/index.html
@@ -98,6 +98,24 @@
             </div>
         </div>
     </div>
+    <div class="modal" tabindex="-1" id="about-modal">
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title">About</h5>
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <p>Simple Web Implementation of a basic Notepad.</p>
+              <p class="text-center bg-dark text-light p-1">CopyRight &copy; Prince Thind</p>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            </div>
+          </div>
+        </div>
+      </div>
+      
 
 
 </body>
