preprare for deployment

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj"
         crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/036d54ebd4.js" crossorigin="anonymous"></script>
-    <title>Document</title>
+    <title>Notepad</title>
 </head>
 
 <body>
