remove unnessary webpack bundling

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
                             </li>
                             <li class="nav-item"><a href="#" class="nav-link" data-bs-target="#edit-modal"
                                     data-bs-toggle="modal">Edit</a></li>
-                            <li class="nav-item"><a href="#" class="nav-link" data-bs-target="#about-modal" data-bs-toggle="modal">About</a></li>
+                            <li class="nav-item"><a href="#" class="nav-link" data-bs-target="#about-modal"
+                                    data-bs-toggle="modal">About</a></li>
                         </ul>
                     </div>
                 </div>
@@ -100,23 +101,23 @@
     </div>
     <div class="modal" tabindex="-1" id="about-modal">
         <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title">About</h5>
-              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">About</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>Simple Web Implementation of a basic Notepad.</p>
+                    <p class="text-center bg-dark text-light p-1">CopyRight &copy; Prince Thind</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
             </div>
-            <div class="modal-body">
-              <p>Simple Web Implementation of a basic Notepad.</p>
-              <p class="text-center bg-dark text-light p-1">CopyRight &copy; Prince Thind</p>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-          </div>
         </div>
-      </div>
-      
+    </div>
 
+    <script src="index.js"></script>
 
 </body>
 
